<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registernumber"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/rijksnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/natnr_example"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate_example"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <LinearLayout
        android:id="@+id/moreParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:id="@+id/addParticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/addParticipant"
            android:gravity="center_vertical"
            android:paddingLeft="10dp" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requirements"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <RadioButton android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>
        <RadioButton android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/addressInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:text="@string/street"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:text="@string/nr"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:text="@string/bus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:textColor="@color/grey_dark"/>
            <EditText
                android:id="@+id/nr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:textColor="@color/grey_dark"/>
            <EditText
                android:id="@+id/bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:textColor="@color/grey_dark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:text="@string/city"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:text="@string/postalcode"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:textColor="@color/grey_dark"/>
            <EditText
                android:id="@+id/postalcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:textColor="@color/grey_dark"/>
        </LinearLayout>
        </LinearLayout>
    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/red"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:clickable="true"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>