<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <RadioButton android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>
        <RadioButton android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
        </RadioGroup>
    <LinearLayout
        android:id="@+id/answerPart1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_sub1"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:id="@+id/numbertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:layout_marginRight="20dp"/>
            <EditText
                android:id="@+id/number1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/numberExample"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey_dark"/>
            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_help"
                android:layout_marginLeft="10dp"
                android:tintMode="add"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/number_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/klever"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/roze"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/groen"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/blauw"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registernumber"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_sub2"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:layout_marginRight="20dp"/>
            <EditText
                android:id="@+id/number2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/numberExample"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey_dark"/>
            <ImageView
                android:id="@+id/infoIcon2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_help"
                android:layout_marginLeft="10dp"
                android:tintMode="add"/>
        </LinearLayout>
        </LinearLayout>
    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/red"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:clickable="true"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>