<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/firstName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/phone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey_dark"/>

    <LinearLayout
        android:id="@+id/addPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/addPerson"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/infoSecondPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grey_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/firstName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grey_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_dark"/>
    </LinearLayout>
    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/red"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAllCaps="true"
        android:textSize="18dp"
        android:clickable="true"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>